workload/applications/authenticator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticator
  namespace: elysium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authenticator
  template:
    metadata:
      labels:
        app: authenticator
    spec:
      containers:
        - name: authenticator
          image: yumikokawaii/authenticator:latest          
          ports:            
            - containerPort: 80            
            - containerPort: 443
