workload/applications/authenticator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authenticator
  namespace: elysium
spec:
  selector:
    app: authenticator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
